Refactor LaTeX document structure and formatting
- Updated bibliography entry in book.fdb_latexmk for consistency.
- Adjusted font input paths in book.fls to ensure correct font usage.
- Modified log file entries in book.log to reflect updated compilation times and font loading.
- Regenerated PDF and SyncTeX files to reflect changes in the document.
- Enhanced chapter formatting in book.tex to improve visual hierarchy.
- Corrected table of contents entries in book.toc for accurate page references.
- Streamlined system architecture section in sections/system_architecture.tex for clarity.

--- a/book.tex
+++ b/book.tex
@@ -79,11 +79,12 @@
 \definecolor{pearsongray}{RGB}{88,89,91}
 \definecolor{pearsonlightblue}{RGB}{230,242,250}
 
-% Pearson-style chapter formatting
+% Pearson-style chapter formatting (only 'CHAPTER n.' bold)
 \titleformat{\chapter}[display]
-{\normalfont\sffamily\bfseries\color{pearsonblue}}
-{\huge\chaptertitlename\ \thechapter}{10pt}{\Huge\raggedright}
-[\vspace{10pt}\color{pearsonblue}\rule{\textwidth}{2pt}]
+  {\normalfont\sffamily\color{pearsonblue}}
+  {\LARGE\textbf{\chaptertitlename\ \thechapter} \MakeUppercase{}}
+  {0pt}{\Huge\sffamily\color{pearsonblue}}[
+  \vspace{10pt}\color{pearsonblue}\rule{\textwidth}{2pt}]
 
 % Pearson-style section formatting (matching reference images)
 \titleformat{\section}
@@ -117,8 +118,8 @@
 \usepackage{tocloft}
 \renewcommand{\cfttoctitlefont}{\Huge\sffamily\bfseries\color{pearsonblue}}
 \renewcommand{\cftchapfont}{\sffamily\bfseries\color{pearsonblue}}
-\renewcommand{\cftsecfont}{\sffamily}
-\renewcommand{\cftsubsecfont}{\sffamily\small}
+\renewcommand{\cftsecfont}{\rmfamily}
+\renewcommand{\cftsubsecfont}{\rmfamily\small}
 
 % Enhanced caption styling
 \captionsetup{
