Update table of contents and adjust section numbering for consistency

--- a/book.tex
+++ b/book.tex
@@ -83,7 +83,7 @@
 \titleformat{\chapter}[display]
   {\normalfont\sffamily\color{pearsonblue}}
   {\LARGE\textbf{\chaptertitlename\ \thechapter} \MakeUppercase{}}
-  {0pt}{\Huge\sffamily\color{pearsonblue}}[
+{2pt}{\Huge\sffamily\bfseries\color{pearsonblue}}[
   \vspace{10pt}\color{pearsonblue}\rule{\textwidth}{2pt}]
 
 % Pearson-style section formatting (matching reference images)
