--- a/sections/acknowledgments.tex
+++ b/sections/acknowledgments.tex
@@ -1,6 +1,4 @@
 \newpage
-\chapter*{\textbf{Acknowledgments}}
+\toclessheading{Acknowledgments}
 
-I strongly believe in a thought that the successful completion of any task would be incomplete without the mention of people whose ceaseless cooperation made it possible, whose constant guidance and encouragement crown all efforts with success. 
-
-So, I am very grateful to my thesis supervisor Dr. Md. Ileas Pramanik sir for the guidance, inspiration and constructive suggestion that help us in the preparation of this task.
+I would like to express my sincere gratitude to all those who have supported and guided me throughout the journey of completing this thesis.
