Update LaTeX document structure: add tabularx package, adjust table formatting, and refine section references

--- a/book.tex
+++ b/book.tex
@@ -72,6 +72,7 @@
 \usepackage{enumitem}
 \usepackage{framed}
 \usepackage{tcolorbox}
+\usepackage{tabularx}
 \usepackage[super]{cite}
 
 % Pearson color scheme
@@ -83,7 +84,7 @@
 \titleformat{\chapter}[display]
   {\normalfont\sffamily\color{pearsonblue}}
   {\LARGE\textbf{\chaptertitlename\ \thechapter} \MakeUppercase{}}
-{2pt}{\Huge\sffamily\bfseries\color{pearsonblue}}[
+{10pt}{\Huge\sffamily\bfseries\color{pearsonblue}}[
   \vspace{10pt}\color{pearsonblue}\rule{\textwidth}{2pt}]
 
 % Pearson-style section formatting (matching reference images)
