--- a/sections/system_architecture.tex
+++ b/sections/system_architecture.tex
@@ -1,8 +1,7 @@
 % This is now Chapter 5
-
 The proposed system is a modular, end-to-end multimodal machine learning pipeline that processes audio, video, and transcript data streams in parallel, fuses their representations, and predicts teaching effectiveness using a unified classifier. This architecture leverages state-of-the-art models and best practices from the HuggingFace ecosystem and the broader machine learning community.
 
-\begin{figure}[H]
+\begin{figure}[ht]
     \centering
     \begin{tikzpicture}[
         module/.style={rectangle, draw, rounded corners, minimum width=2.5cm, minimum height=1.1cm, text width=2.5cm, align=center, font=\small, fill=gray!10},
@@ -115,7 +114,7 @@ The output of our multimodal teacher evaluation system is a categorical label th
 
 The classification is as follows (see Table~\ref{tab:output_categories}):
 
-\begin{table}[t]
+\begin{table}[H]
     \centering
     \normalsize
     \caption{Teacher Evaluation Output Categories}
@@ -136,57 +135,59 @@ The classification is as follows (see Table~\ref{tab:output_categories}):
 
 Each session is assigned one of these categories, which can be used for formative feedback, professional development planning, or institutional reporting. The system is also capable of providing a confidence score for each prediction, and can generate a brief textual summary highlighting the key factors influencing the classification (e.g., engagement level, clarity, responsiveness). This approach ensures that the output is both meaningful and actionable for stakeholders.
 
+% Use tabularx for automatic column width adjustment
+\sloppy % Allow more flexible line breaking in the table
 \begin{table*}[htbp]
 \centering
 \renewcommand{\arraystretch}{1.5} % Increase row padding
 \setlength{\tabcolsep}{8pt} % Increase column padding
 \caption{Pedagogical Dimensions Mapped to Multimodal Features with Supporting Literature}
-\begin{tabular}{|p{3cm}|p{4.5cm}|p{4.5cm}|p{3.8cm}|}
+\begin{tabularx}{\textwidth}{|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|>{\raggedright\arraybackslash}X|}
 \hline
-\textbf{\normalsize Dimension} & \textbf{\normalsize Audio Features} & \textbf{\normalsize Visual Features} & \textbf{\normalsize Linguistic Features} \\
+	\textbf{\normalsize Dimension} & \textbf{\normalsize Audio Features} & \textbf{\normalsize Visual Features} & \textbf{\normalsize Linguistic Features} \\
 \hline
 
-\textbf{Engagement} & 
+	\textbf{Engagement} & 
 Pitch variability, speech rate, intensity, arousal level \cite{hou2024encouragement, dmello2012multimodal} & 
 Interaction frequency, gesture frequency, classroom coverage \cite{mcneill1992hand, ochoa2016multimodal} & 
-None specific \cite{hou2024encouragement, dmello2012multimodal} \\ 
+None specific \cite{hou2024encouragement, dmello2012multimodal} \\
 \hline
 
-\textbf{Clarity} & 
+	\textbf{Clarity} & 
 Speech rate, pause ratio, vocal jitter/stability \cite{falcon2024discourse, rowe1986wait} & 
 Frontal stance, head pose (gaze alignment), low distraction movement \cite{mcneill1992hand, ochoa2016multimodal} & 
 Sentence structure, use of examples, summaries, lexical clarity \cite{falcon2024discourse, rowe1986wait} \\
 \hline
 
-\textbf{Organization} & 
+	\textbf{Organization} & 
 Turn-taking structure, speaking time distribution \cite{ochoa2016multimodal, dmello2012multimodal} & 
 Movement between zones (topic transitions), spatial consistency \cite{mcneill1992hand, ochoa2016multimodal} & 
 Discourse coherence, topic structure, transitions \cite{ochoa2016multimodal, dmello2012multimodal} \\
 \hline
 
-\textbf{Responsiveness} & 
+	\textbf{Responsiveness} & 
 Response latency, dynamic pitch, prosodic emphasis \cite{rowe1986wait, dmello2012multimodal} & 
 Proximity to students when responding, frequency of engagement moments \cite{mcneill1992hand, ochoa2016multimodal} & 
 Feedback types (evaluative, corrective, elaborative), wait time \cite{rowe1986wait} \\
 \hline
 
-\textbf{Emotional Climate} & 
+	\textbf{Emotional Climate} & 
 Valence and arousal scores from emotional prosody \cite{dmello2012multimodal} & 
 Facial expressions, expressive gestures \cite{mcneill1992hand, ochoa2016multimodal} & 
 Sentiment polarity, affective markers \cite{dmello2012multimodal} \\
 \hline
 
-\textbf{Inclusivity \& Accessibility} & 
+	\textbf{Inclusivity \& Accessibility} & 
 Turn balance (teacher vs. students), speaking time equity & 
 Gaze distribution, equal visual attention, gesture openness \cite{fugate2010gaze} & 
 Lexical simplicity, inclusive language, diverse addressing styles \cite{Steinberg2021, Heffernan2022} \\
 \hline
 
-\textbf{Cognitive Activation} & 
+	\textbf{Cognitive Activation} & 
 Pitch intensity shifts for emphasis & 
 Dynamic posture during questioning & 
 Bloom's Taxonomy question complexity levels \cite{graesser2005question, chi1989self} \\
 \hline
 
-\end{tabular}
+\end{tabularx}
 \end{table*}
