Refactor code structure for improved readability and maintainability

--- a/book.tex
+++ b/book.tex
@@ -1,4 +1,3 @@
-% Pearson-style Book Template with C059 Font
 % Compile with: xelatex book.tex (recommended) or lualatex book.tex
 % For pdflatex, uncomment the alternative font setup below
 
@@ -192,7 +191,7 @@
 \input{sections/system_architecture.tex}
 
 \chapter{Results and Discussion}
-Present the findings of the comparative study here. Include quantitative and qualitative results, statistical analyses, and a discussion interpreting the significance of the results in the context of existing literature.
+\input{sections/results_and_discussions.tex}
 
 \chapter{Conclusion and Future Work}
 Summarize the main contributions and findings of the study. Discuss limitations and propose directions for future research.
