Update LaTeX files: adjust timestamps in .fdb_latexmk and .log, add \raggedbottom to book.tex

--- a/book.tex
+++ b/book.tex
@@ -153,7 +153,7 @@
 \newcommand{\projectTitle}{A novel approach to evaluate pedagogical outcomes using audio, video, and linguistic analysis}
 
 \begin{document}
-
+\raggedbottom
 
 \frontmatter
 \pagestyle{plain} % Disable headers for frontmatter (before TOC)
