Refactor subsection numbering and update table of contents
- Adjusted subsection numbering to remove middle zeros (e.g., 2.0.1 -> 2.1).
- Updated table of contents to reflect new subsection numbering and improved organization.
- Enhanced algorithm comparison section in results and discussions for clarity and detail.
- Minor updates to auxiliary files to ensure consistency with changes made in the main document.

--- a/book.tex
+++ b/book.tex
@@ -97,6 +97,9 @@
 {\normalfont\large\sffamily\bfseries\color{black}}
 {\thesubsection}{1em}{}
 
+% Remove middle zero from subsection numbering (6.0.1 -> 6.1)
+\renewcommand{\thesubsection}{\thechapter.\arabic{subsection}}
+
 % Subsubsection formatting
 \titleformat{\subsubsection}
 {\normalfont\normalsize\sffamily\bfseries}
