Update LaTeX files: adjust timestamps in auxiliary files, enhance acknowledgments section with detailed gratitude, and update binary outputs

--- a/sections/acknowledgments.tex
+++ b/sections/acknowledgments.tex
@@ -1,4 +1,4 @@
 \newpage
 \toclessheading{Acknowledgments}
 
-I would like to express my sincere gratitude to all those who have supported and guided me throughout the journey of completing this thesis.
+At first I would like to express my gratitude to THE ALMIGHTY ALLAH, the most gracious and the most merciful, for giving me the strength and ability to complete this thesis. Then I would like to show my deeepest gratitude to my supervisor, Md Mizanur Rahoman, for his continuous support, guidance, and encouragement throughout my research journey. His insightful feedback and unwavering belief in my potential have been instrumental in shaping this work.
