--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,4 +1,7 @@
 \newpage
 \toclessheading{Abstract}
 
-This thesis presents a novel approach to evaluate pedagogical outcomes using audio, video, and linguistic analysis. By integrating multimodal data sources, we aim to provide a comprehensive assessment of student engagement and learning effectiveness. The proposed methodology leverages advanced machine learning techniques to analyze audio cues, facial expressions, and linguistic patterns during educational activities. Our findings demonstrate the potential of this approach to enhance traditional evaluation methods, offering deeper insights into student performance and areas for improvement. This research contributes to the field of educational technology by introducing innovative tools for educators to better understand and support their students' learning journeys.
+Effective evaluation of teaching is essential for educational quality assurance, yet conventional approaches such as student feedback often suffer from subjectivity, bias, and inconsistency. This motivated our hypothesis that objective, data-driven analysis of multimodal classroom interactions can provide a more reliable measure of pedagogical effectiveness.
+To test this hypothesis, we designed a system that analyzes classroom video, audio, and transcripts to capture multiple dimensions of teaching. Visual data were processed to extract teacher movement and engagement patterns, audio data were analyzed for prosody and vocal delivery, and linguistic data were examined for discourse clarity and structure. Logistic regression models were then applied to predict instructional outcomes.
+The results demonstrate that while linguistic features alone offered the strongest unimodal performance at 67.0\% accuracy, integration of all modalities significantly improved predictive power. The multimodal system achieved 71.33\% accuracy, showed greater cross-validation stability, and reached an area under the curve of 0.796. These findings confirm our hypothesis that multimodal integration captures complementary aspects of pedagogy that single modalities cannot fully represent.
+This work positions multimodal learning analytics as a scalable, objective alternative to feedback, enabling future automated systems for teaching evaluation.
