--- a/sections/approval.tex
+++ b/sections/approval.tex
@@ -3,11 +3,10 @@
 
 This is to certify that the thesis titled "\textbf{\projectTitle}" submitted by Md Shafiqul Islam to the Department of Computer Science and Engineering, Begum Rokeya University, Rangpur, in partial fulfillment of the requirements for the degree of Bachelor of Science in Computer Science and Engineering, is a record of an original research work carried out by him under my supervision and guidance.
 To the best of my knowledge, the thesis has not formed the basis for the award of any degree, diploma, or other similar titles previously.
-I further certify that the thesis has been prepared according to the prescribed format and style of the university and is worthy of consideration for the award of the degree.
 \vspace{2cm}
 \begin{flushright}
     ----------------------------\\
-    \textbf{Md Mizanur Rahoman}\\
+    \textbf{\thesupervisor}\\
     \textbf{Supervisor}\\
     Computer Science And Engineering\\
     Begum Rokeya University, Rangpur\\
