--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,6 +1,6 @@
 % This is now Chapter 1
 
-The evaluation of teacher performance is a cornerstone of educational quality assurance and institutional improvement \cite{Heffernan2022}. Effective teaching not only enhances student learning outcomes but also shapes the reputation and development of educational institutions \cite{Ajmal2024}. Traditionally, the assessment of teaching effectiveness has relied heavily on student feedback, which, while valuable, is often subject to various biases and limitations \cite{Heffernan2022}. These include subjectivity, inconsistency, and the influence of non-academic factors such as personal rapport, grading leniency, or classroom environment \cite{Steinberg2021}. Research has shown that demographic factors, such as gender and race, can also influence student evaluations, raising concerns about fairness and validity \cite{Steinberg2021}.
+The contemporary educational landscape demands innovative approaches to assess and enhance teaching quality across diverse academic institutions \cite{Heffernan2022}. While traditional evaluation methods have served educational systems for decades, emerging technologies present unprecedented opportunities to transform how we understand and measure pedagogical effectiveness \cite{Ajmal2024}. The limitations inherent in conventional assessment approaches—particularly the subjective nature of student feedback—have prompted researchers and educators to explore alternative methodologies that offer greater objectivity, consistency, and actionable insights \cite{Heffernan2022}. These challenges encompass issues such as demographic bias, inconsistent rating criteria, and the influence of factors unrelated to actual teaching competency \cite{Steinberg2021}. Studies reveal that gender, ethnicity, and personal charisma can significantly skew student evaluations, potentially undermining fair assessment practices \cite{Steinberg2021}.
 
 Despite these drawbacks, student feedback remains prevalent due to its simplicity, cost-effectiveness, and ability to capture students' perspectives on teaching quality \cite{Ajmal2024}. However, the reliability of student feedback is challenged by inconsistencies across different cohorts and courses, as well as by the tendency for students to focus on surface-level attributes rather than deeper pedagogical competencies \cite{carvalho2022biases}. Several studies have highlighted the need for more robust and objective evaluation mechanisms to complement or replace traditional feedback \cite{Ginsburg2022NecessaryBI}.
 
@@ -17,9 +17,8 @@ Despite the potential of multimodal systems, there is a lack of empirical studie
     \item Provide recommendations for integrating advanced evaluation systems into existing educational frameworks \cite{Ginsburg2022NecessaryBI, 10.1007/978-981-99-9109-9_7, hou2024encouragement}.
 \end{itemize}
 
-The remainder of this book is organized as follows: Chapter 2 reviews related work in teacher evaluation and multimodal systems. Chapter 3 describes the proposed methodology, including data collection and analysis techniques. Chapter 4 presents the experimental setup, including classroom environment, hardware, and dataset details. Chapter 5 details the multimodal system architecture and implementation, including the system pipeline (see Figure~\ref{fig:multimodal_architecture}) and output classification (see Table~\ref{tab:output_categories}). Chapter 6 presents the results and discussion, and Chapter 7 concludes with final remarks and future directions.
-
 The integration of multimodal systems into teacher evaluation frameworks represents a significant shift in educational assessment paradigms. These systems not only address the limitations of traditional feedback but also align with broader trends in educational technology and data-driven decision-making. For instance, the use of machine learning algorithms to analyze multimodal data streams enables the identification of nuanced teaching behaviors that correlate with student engagement and learning outcomes. Furthermore, the adoption of such systems has practical implications for teacher training and professional development, as they provide actionable insights that can guide instructional improvement.
 
 However, the implementation of multimodal evaluation systems is not without challenges. Issues such as data privacy, the need for robust validation across diverse educational contexts, and the potential for algorithmic bias must be carefully considered. Despite these challenges, the potential benefits of multimodal systems—such as enhanced reliability, validity, and comprehensiveness—make them a promising complement to traditional student feedback. This study aims to explore these dynamics by conducting a comparative analysis of both evaluation approaches, thereby contributing to the growing body of literature on innovative educational assessment methods.
 
+The remainder of this book is organized as follows: \textbf{Chapter 2} reviews related work in teacher evaluation and multimodal systems. \textbf{Chapter 3} describes the proposed methodology, including data collection and analysis techniques. \textbf{Chapter 4} presents the experimental setup, including classroom environment, hardware, and dataset details. \textbf{Chapter 5} details the multimodal system architecture and implementation, including the system pipeline (see Figure~\ref{fig:multimodal_architecture}) and output classification (see Table~\ref{tab:output_categories}). \textbf{Chapter 6} presents the results and discussion, and \textbf{Chapter 7} concludes with final remarks and future directions.
